--- a/style.css
+++ b/style.css
@@ -178,6 +178,10 @@ Updated: 2024-02-07 13:22:36
   background-color: #263238;
 }
 
+.bg-innova-color-250 {
+  background-color: #6db3f830;
+}
+
 /* Navbar Styles */
 
 /* Shared Styles */
