--- a/style.css
+++ b/style.css
@@ -109,6 +109,9 @@ Updated: 2024-02-07 13:22:36
 .innova-color-300 {
   color: #000000;
 }
+.innova-color-310 {
+  color: #838383;
+}
 
 /* Background Color Scheme */
 .bg-innova-color-10 {
@@ -236,6 +239,47 @@ Updated: 2024-02-07 13:22:36
   font-weight: 500;
 }
 /* Shared styles ends here */
+
+/* About us page starts here */
+.header-part {
+  margin-top: 130px;
+  margin-bottom: 130px;
+}
+.dots-block-img {
+  width: 405px;
+  height: 154px;
+  z-index: -1;
+  margin-left: 75px;
+}
+.dots-img {
+  width: 100%;
+  
+}
+
+/* Image Styling */
+.img-container {
+  position: relative;
+  display: inline-block;
+}
+.main-img {
+  width: 85%;
+  border-radius: 10px;
+  height: auto;
+}
+.small-img {
+  width: 40%;
+  position: absolute;
+  border-radius: 10px;
+}
+.top-img {
+  top: -20px;
+  right: 10px;
+}
+.bottom-img {
+  bottom: -20px;
+  left: 10px;
+}
+/* About us page styles ends here */
 
 /* Navbar/Header section styles starts here */
 .dots-block {
@@ -1659,11 +1703,6 @@ a:focus {
   .header-title {
     font-size: 40px;
     line-height: 60px;
-  }
-
-  .header-paragraph {
-    padding-left: 20px;
-    padding-right: 10px;
   }
 
   .header-btn-text {
