--- a/style.css
+++ b/style.css
@@ -186,11 +186,12 @@ Updated: 2024-02-07 13:22:36
 .bg-innova-color-240 {
   background-color: #263238;
 }
-
 .bg-innova-color-250 {
   background: rgba(109, 179, 248, 0.3);
 }
-
+.bg-innova-color-260 {
+  background: rgba(42, 59, 160, 0.9);
+}
 /* Shared styles starts here */
 .title {
   font-family: "Saira";
@@ -198,7 +199,6 @@ Updated: 2024-02-07 13:22:36
   font-style: normal;
   font-weight: 700;
   line-height: 49.8px;
-  text-transform: uppercase;
   text-align: left;
 }
 .paragraph {
@@ -227,6 +227,13 @@ Updated: 2024-02-07 13:22:36
 }
 .card-btn:hover {
   background-color: #619de8;
+}
+
+.connect-btn {
+  border-radius: 6px;
+  padding: 10px 25px;
+  border: 0px;
+  font-weight: 500;
 }
 /* Shared styles ends here */
 
@@ -306,7 +313,7 @@ Updated: 2024-02-07 13:22:36
   padding: 20px;
   border-radius: 10px;
   border: 0px;
-  box-shadow: 0px 2px 23px 0px rgba(76, 76, 76, 0.04);
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
 }
 .card-body {
   display: flex;
@@ -337,13 +344,14 @@ Updated: 2024-02-07 13:22:36
 
 /* Offer section styles starts here*/
 .offer-section {
-  height: 1030px;
-  margin-top: 140px;
-  margin-bottom: 140px;
+  margin-top: 130px;
+  margin-bottom: 130px;
 }
-
-.offer-section-content {
-  display: flex;
+.offer-card {
+  box-shadow: 0px 0px 0px;
+}
+.offer-item {
+  margin-bottom: 200px;
 }
 /* Offer section styles ends here*/
 
@@ -473,6 +481,12 @@ a:focus {
   margin-bottom: 8px;
 }
 
+/* Sub-section styles starts here */
+.sub-section {
+  margin-top: 155px;
+}
+/* Sub-section styles ends here */
+
 .gs_logo_area.carousel_has--dots .gs_logo_container {
   padding-bottom: 30px;
 }
@@ -494,6 +508,9 @@ a:focus {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+}
+
+.connect-section {
 }
 
 /* box css  */
@@ -559,11 +576,12 @@ a:focus {
   padding: 20px;
   width: 120px;
   height: 120px;
-  border-radius: 50%;
+  background-image: url(./assets/images/custom-software-development.png);
+  /* border-radius: 50%;
   background-image: url("assets/images/innovasoft-custom-software-development.png");
   background-color: #fff1eb;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
   z-index: 999;
 }
 
@@ -572,11 +590,12 @@ a:focus {
   padding: 20px;
   width: 120px;
   height: 120px;
-  border-radius: 50%;
+  background-image: url(./assets/images/web-development.png);
+  /* border-radius: 50%;
   background-image: url("assets/images/innovasoft-web-development.png");
   background-color: #e4fcff;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
   z-index: 999;
 }
 
@@ -585,11 +604,12 @@ a:focus {
   padding: 20px;
   width: 120px;
   height: 120px;
-  border-radius: 50%;
+  background-image: url(./assets/images/mobile-app-development.png);
+  /* border-radius: 50%;
   background-image: url("assets/images/innovasoft-mobile-app-development.png");
   background-color: #eef0ff;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
   z-index: 999;
 }
 
@@ -598,11 +618,12 @@ a:focus {
   padding: 20px;
   width: 120px;
   height: 120px;
-  border-radius: 50%;
+  background-image: url(./assets/images/maintenance-support.png);
+  /* border-radius: 50%;
   background-image: url("assets/images/innovasoft-ui-ux-design.png");
   background-color: #e5f7ff;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
   z-index: 999;
 }
 
