--- a/style.css
+++ b/style.css
@@ -430,8 +430,8 @@ Updated: 2024-02-07 13:22:36
 }
 
 .section-gap {
-  padding-top: 75px;
-  padding-bottom: 75px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .main-navigation a {
@@ -754,6 +754,96 @@ a:focus {
   background-position: center;
   background-repeat: no-repeat; */
   z-index: 999;
+}
+.accordion-button:not(.collapsed)::after {
+  background:  url(./assets/images/arrow-right.png) no-repeat;
+  transform: rotate(-90deg);
+}
+.accordion-button::after {
+  background:  url(./assets/images/arrow-right.png) no-repeat;
+  transform: rotate(0deg);
+}
+.accordion-button:not(.collapsed) {
+  color: #333333;
+  background-color: #f9f9f9;
+  /* box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125); */
+  box-shadow: 0px 2px 23px 0px rgba(76, 76, 76, 0.04);
+}
+
+.accordion-button.collapsed {
+  color: #333333;
+  background-color: #f9f9f9;
+  box-shadow: 0px 2px 23px 0px rgba(76, 76, 76, 0.04);
+  /* box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125); */
+}
+
+.accordion-item {
+  border: 0px;
+}
+
+.accordion-button.collapsed.accordion-button {
+  border-radius: 5px;
+}
+
+.accordion-item:last-of-type .accordion-button.collapsed {
+  border-radius: 5px;
+}
+
+.accordion-button:not(.collapsed) {
+  border-radius: 5px;
+}
+
+.accordion-item:last-of-type:not(.collapsed) .accordion-button {
+  border-radius: 5px;
+}
+
+.accordion-item:first-of-type:not(.collapsed) .accordion-button {
+  border-radius: 5px;
+}
+
+.faq-title {
+  color: var(--Text-Title-Text, #333);
+  font-variant-numeric: lining-nums proportional-nums;
+  font-family: "Inter";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 22px;
+  /* 122.222% */
+  letter-spacing: 0.18px;
+}
+
+.faq-details {
+  color: var(--Paragraph-Colour, #999);
+  font-family: "Inter";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  /* 177.778% */
+  letter-spacing: 0.18px;
+}
+
+.about-faq-title {
+  color: #2A3BA0 !important;
+  font-family: "Inter";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 21.78px;
+  text-transform: uppercase;
+}
+
+.about-faq-details {
+  color: var(--Paragraph-Colour, #999);
+  background-color: #e7f2fe;
+  font-family: "Inter";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  /* 177.778% */
+  letter-spacing: 0.18px;
 }
 
 .dots-bottom-left {
