--- a/style.css
+++ b/style.css
@@ -847,21 +847,21 @@ a:focus {
 }
 
 .dots-bottom-left {
-  background-image: url("assets/images/dot-image.png");
+  background-image: url("assets/images/dot-block-image.png");
   background-repeat: no-repeat;
   background-position: left bottom;
   background-size: 320px;
 }
 
 .dots-block-left {
-  background-image: url("assets/images/dot-image.png");
+  background-image: url("assets/images/dot-block-image.png");
   background-repeat: no-repeat;
   background-position: left top;
   background-size: 320px;
 }
 
 .dots-block-right {
-  background-image: url("assets/images/dot-image.png");
+  background-image: url("assets/images/dot-block-image.png");
   background-repeat: no-repeat;
   background-position: right bottom;
   background-size: 320px;
@@ -1055,7 +1055,7 @@ a:focus {
     border-right: 2px solid #43a661;
   }
 
-  .stf-arrow-top1 {
+  .arrow-top-left {
     z-index: 999;
     width: 20%;
     height: 15%;
@@ -1063,7 +1063,7 @@ a:focus {
     top: -2%;
   }
 
-  .stf-arrow-top2 {
+  .arrow-top-right {
     z-index: 999;
     width: 20%;
     height: 15%;
@@ -1071,84 +1071,12 @@ a:focus {
     top: -1%;
   }
 
-  .stf-arrow-bottom {
+  .arrow-bottom {
     z-index: 999;
     width: 20%;
     height: 15%;
     left: 40%;
     top: 48%;
-  }
-
-  .fsd-arrow-top1 {
-    z-index: 999;
-    width: 21%;
-    height: 13%;
-    left: 13%;
-    top: 0%;
-  }
-
-  .fsd-arrow-top2 {
-    z-index: 999;
-    width: 21%;
-    height: 13%;
-    left: 64%;
-    top: 0%;
-  }
-
-  .fsd-arrow-bottom {
-    z-index: 999;
-    width: 21%;
-    height: 11%;
-    left: 39%;
-    top: 27%;
-  }
-
-  .mvp-arrow-top1 {
-    z-index: 999;
-    width: 21%;
-    height: 13%;
-    left: 13%;
-    top: 0%;
-  }
-
-  .mvp-arrow-top2 {
-    z-index: 999;
-    width: 21%;
-    height: 13%;
-    left: 64%;
-    top: 0%;
-  }
-
-  .mvp-arrow-bottom {
-    z-index: 999;
-    width: 20%;
-    height: 12%;
-    left: 40%;
-    top: 29%;
-  }
-
-  .gb-arrow-top1 {
-    z-index: 999;
-    width: 20%;
-    height: 15%;
-    left: 14%;
-    top: 2%;
-  }
-
-  .gb-arrow-top2 {
-    z-index: 999;
-    width: 20%;
-    height: 15%;
-    left: 64%;
-    top: 2%;
-  }
-
-  .gb-arrow-bottom {
-    z-index: 999;
-    width: 20%;
-    height: 14%;
-    left: 40%;
-    top: 39%;
   }
 }
 
@@ -1204,7 +1132,7 @@ a:focus {
     border-right: 2px solid #43a661;
   }
 
-  .stf-arrow-top1 {
+  .arrow-top-left {
     z-index: 999;
     width: 20%;
     height: 13%;
@@ -1212,7 +1140,7 @@ a:focus {
     top: 0%;
   }
 
-  .stf-arrow-top2 {
+  .arrow-top-right {
     z-index: 999;
     width: 20%;
     height: 13%;
@@ -1220,84 +1148,12 @@ a:focus {
     top: 0%;
   }
 
-  .stf-arrow-bottom {
+  .arrow-bottom {
     z-index: 999;
     width: 20%;
     height: 15%;
     left: 40%;
     top: 30%;
-  }
-
-  .fsd-arrow-top1 {
-    z-index: 999;
-    width: 20%;
-    height: 11%;
-    left: 13%;
-    top: 0%;
-  }
-
-  .fsd-arrow-top2 {
-    z-index: 999;
-    width: 20%;
-    height: 11%;
-    left: 64%;
-    top: 0%;
-  }
-
-  .fsd-arrow-bottom {
-    z-index: 999;
-    width: 20%;
-    height: 10%;
-    left: 39%;
-    top: 26%;
-  }
-
-  .mvp-arrow-top1 {
-    z-index: 999;
-    width: 21%;
-    height: 13%;
-    left: 13%;
-    top: 0%;
-  }
-
-  .mvp-arrow-top2 {
-    z-index: 999;
-    width: 21%;
-    height: 13%;
-    left: 64%;
-    top: 0%;
-  }
-
-  .mvp-arrow-bottom {
-    z-index: 999;
-    width: 20%;
-    height: 12%;
-    left: 40%;
-    top: 29%;
-  }
-
-  .gb-arrow-top1 {
-    z-index: 999;
-    width: 20%;
-    height: 15%;
-    left: 14%;
-    top: 2%;
-  }
-
-  .gb-arrow-top2 {
-    z-index: 999;
-    width: 20%;
-    height: 15%;
-    left: 64%;
-    top: 2%;
-  }
-
-  .gb-arrow-bottom {
-    z-index: 999;
-    width: 20%;
-    height: 14%;
-    left: 40%;
-    top: 39%;
   }
 }
 
@@ -1348,7 +1204,7 @@ a:focus {
     border-right: 2px solid #43a661;
   }
 
-  .stf-arrow-top1 {
+  .arrow-top-left {
     z-index: 999;
     width: 20%;
     height: 13%;
@@ -1356,7 +1212,7 @@ a:focus {
     top: 0%;
   }
 
-  .stf-arrow-top2 {
+  .arrow-top-right {
     z-index: 999;
     width: 20%;
     height: 13%;
@@ -1364,83 +1220,11 @@ a:focus {
     top: 0%;
   }
 
-  .stf-arrow-bottom {
+  .arrow-bottom {
     z-index: 999;
     width: 20%;
     height: 14%;
     left: 40%;
-  }
-
-  .fsd-arrow-top1 {
-    z-index: 999;
-    width: 20%;
-    height: 11%;
-    left: 13%;
-    top: 0%;
-  }
-
-  .fsd-arrow-top2 {
-    z-index: 999;
-    width: 20%;
-    height: 11%;
-    left: 64%;
-    top: 0%;
-  }
-
-  .fsd-arrow-bottom {
-    z-index: 999;
-    width: 19%;
-    height: 9%;
-    left: 40%;
-    top: 24%;
-  }
-
-  .mvp-arrow-top1 {
-    z-index: 999;
-    width: 20%;
-    height: 11%;
-    left: 13%;
-    top: 0%;
-  }
-
-  .mvp-arrow-top2 {
-    z-index: 999;
-    width: 20%;
-    height: 11%;
-    left: 64%;
-    top: 0%;
-  }
-
-  .mvp-arrow-bottom {
-    z-index: 999;
-    width: 19%;
-    height: 10%;
-    left: 40%;
-    top: 25%;
-  }
-
-  .gb-arrow-top1 {
-    z-index: 999;
-    width: 19%;
-    height: 15%;
-    left: 14%;
-    top: 2%;
-  }
-
-  .gb-arrow-top2 {
-    z-index: 999;
-    width: 19%;
-    height: 15%;
-    left: 65%;
-    top: 2%;
-  }
-
-  .gb-arrow-bottom {
-    z-index: 999;
-    width: 20%;
-    height: 14%;
-    left: 40%;
-    top: 38%;
   }
 }
 
@@ -1472,7 +1256,7 @@ a:focus {
     font-size: 14px;
   }
 
-  .stf-arrow-top1 {
+  .arrow-top-left {
     z-index: 999;
     width: 19%;
     height: 12%;
@@ -1480,7 +1264,7 @@ a:focus {
     top: 0%;
   }
 
-  .stf-arrow-top2 {
+  .arrow-top-right {
     z-index: 999;
     width: 19%;
     height: 12%;
@@ -1488,84 +1272,12 @@ a:focus {
     top: 0%;
   }
 
-  .stf-arrow-bottom {
+  .arrow-bottom {
     z-index: 999;
     width: 19%;
     height: 12%;
     left: 40%;
     top: 27%;
-  }
-
-  .fsd-arrow-top1 {
-    z-index: 999;
-    width: 19%;
-    height: 10%;
-    left: 13%;
-    top: 0%;
-  }
-
-  .fsd-arrow-top2 {
-    z-index: 999;
-    width: 19%;
-    height: 10%;
-    left: 65%;
-    top: 0%;
-  }
-
-  .fsd-arrow-bottom {
-    z-index: 999;
-    width: 18%;
-    height: 8%;
-    left: 41%;
-    top: 22%;
-  }
-
-  .mvp-arrow-top1 {
-    z-index: 999;
-    width: 19%;
-    height: 10%;
-    left: 13%;
-    top: 0%;
-  }
-
-  .mvp-arrow-top2 {
-    z-index: 999;
-    width: 19%;
-    height: 10%;
-    left: 65%;
-    top: 0%;
-  }
-
-  .mvp-arrow-bottom {
-    z-index: 999;
-    width: 18%;
-    height: 8%;
-    left: 41%;
-    top: 22%;
-  }
-
-  .gb-arrow-top1 {
-    z-index: 999;
-    width: 18%;
-    height: 14%;
-    left: 14%;
-    top: 2%;
-  }
-
-  .gb-arrow-top2 {
-    z-index: 999;
-    width: 18%;
-    height: 14%;
-    left: 65%;
-    top: 2%;
-  }
-
-  .gb-arrow-bottom {
-    z-index: 999;
-    width: 18%;
-    height: 13%;
-    left: 41%;
-    top: 37%;
   }
 
   .faq-div {
@@ -1627,7 +1339,7 @@ a:focus {
     font-size: 12px;
   }
 
-  .stf-arrow-top1 {
+  .arrow-top-left {
     z-index: 999;
     width: 18%;
     height: 9%;
@@ -1635,7 +1347,7 @@ a:focus {
     top: 1%;
   }
 
-  .stf-arrow-top2 {
+  .arrow-top-right {
     z-index: 999;
     width: 18%;
     height: 9%;
@@ -1643,84 +1355,12 @@ a:focus {
     top: 1%;
   }
 
-  .stf-arrow-bottom {
+  .arrow-bottom {
     z-index: 999;
     width: 18%;
     height: 9%;
     left: 40%;
     top: 29%;
-  }
-
-  .fsd-arrow-top1 {
-    z-index: 999;
-    width: 18%;
-    height: 7%;
-    left: 13%;
-    top: 1%;
-  }
-
-  .fsd-arrow-top2 {
-    z-index: 999;
-    width: 18%;
-    height: 7%;
-    left: 65%;
-    top: 1%;
-  }
-
-  .fsd-arrow-bottom {
-    z-index: 999;
-    width: 18%;
-    height: 6%;
-    left: 41%;
-    top: 18%;
-  }
-
-  .mvp-arrow-top1 {
-    z-index: 999;
-    width: 18%;
-    height: 7%;
-    left: 14%;
-    top: 2%;
-  }
-
-  .mvp-arrow-top2 {
-    z-index: 999;
-    width: 17%;
-    height: 7%;
-    left: 66%;
-    top: 2%;
-  }
-
-  .mvp-arrow-bottom {
-    z-index: 999;
-    width: 18%;
-    height: 7%;
-    left: 41%;
-    top: 20%;
-  }
-
-  .gb-arrow-top1 {
-    z-index: 999;
-    width: 17%;
-    height: 13%;
-    left: 14%;
-    top: 2%;
-  }
-
-  .gb-arrow-top2 {
-    z-index: 999;
-    width: 17%;
-    height: 13%;
-    left: 66%;
-    top: 2%;
-  }
-
-  .gb-arrow-bottom {
-    z-index: 999;
-    width: 18%;
-    height: 12%;
-    left: 41%;
-    top: 35%;
   }
 
   .faq-div {
@@ -1816,7 +1456,7 @@ a:focus {
 }
 
 @media (min-width: 1400px) {
-  .stf-arrow-top1 {
+  .arrow-top-left {
     z-index: 999;
     width: 18%;
     height: 9%;
@@ -1824,7 +1464,7 @@ a:focus {
     top: 5%;
   }
 
-  .stf-arrow-top2 {
+  .arrow-top-right {
     z-index: 999;
     width: 18%;
     height: 9%;
@@ -1832,7 +1472,7 @@ a:focus {
     top: 5%;
   }
 
-  .stf-arrow-bottom {
+  .arrow-bottom {
     z-index: 999;
     width: 18%;
     height: 9%;
@@ -1850,7 +1490,7 @@ a:focus {
 }
 
 @media (min-width: 1700px) {
-  .stf-arrow-top1 {
+  .arrow-top-left {
     z-index: 999;
     width: 18%;
     height: 9%;
@@ -1858,7 +1498,7 @@ a:focus {
     top: 5%;
   }
 
-  .stf-arrow-top2 {
+  .arrow-top-right {
     z-index: 999;
     width: 18%;
     height: 9%;
@@ -1866,7 +1506,7 @@ a:focus {
     top: 5%;
   }
 
-  .stf-arrow-bottom {
+  .arrow-bottom {
     z-index: 999;
     width: 18%;
     height: 9%;
