contact-us completed

--- a/style.css
+++ b/style.css
@@ -1052,7 +1052,7 @@ a:focus {
   }
 
   .contact-form-border {
-    border-right: 2px solid #43a661;
+    border-right: 2px solid #6db3f8;
   }
 
   .arrow-top-left {
