--- a/style.css
+++ b/style.css
@@ -482,7 +482,7 @@ Updated: 2024-02-07 13:22:36
 }
 
 .main-navigation ul.sub-menu a:hover {
-  color: #73bf44;
+  color: #2a3ba0;
 }
 
 a:focus {
@@ -506,9 +506,9 @@ a:focus {
 .current-menu-item > a,
 .current-menu-parent > a,
 .current-menu-ancestor > a {
-  /* color: #2a3ba0 !important; */
+  color: #2a3ba0 !important;
   padding-bottom: 5px;
-  /* border-bottom: 2px solid #2a3ba0; */
+  border-bottom: 2px solid #2a3ba0;
 }
 
 .main-navigation ul ul li {
@@ -521,7 +521,7 @@ a:focus {
 }
 
 .main-navigation ul ul a {
-  color: #2f2f2f;
+  color: #2a3ba0;
   font-family: "Inter";
   font-style: normal;
   font-size: 15px;
@@ -718,6 +718,14 @@ a:focus {
   font-style: normal;
   font-weight: 700;
   line-height: 39.84px;
+}
+.sub-heading {
+  font-family: "Inter";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 21.78px;
+  letter-spacing: 0;
 }
 
 /* dashed arrow css */
@@ -1337,7 +1345,9 @@ a:focus {
     width: 35%;
     margin: 0 auto;
   }
-
+  .main-navigation a { 
+    color: #fff !important;
+  }
   /* .sf-arrows .sf-with-ul:after {
         margin-left: 35px;
     } */
